[project]
name = "dreambridge-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloud-sql-python-connector[asyncpg]>=1.17.0",
    "fastapi[standard]>=0.115.8",
    "greenlet>=3.1.1",
    "langchain-openai>=0.3.6",
    "langgraph-checkpoint-postgres>=2.0.15",
    "psycopg[binary]>=3.2.5",
    "psycopg-pool>=3.2.5",
    "sqlalchemy>=2.0.38",
    "langgraph>=0.2.74",
    "langchain-groq>=0.2.4",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.1",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "google-cloud-logging>=3.11.4",
]
